--- a/partials/api/angularPoint.apDecodeService.html
+++ b/partials/api/angularPoint.apDecodeService.html
@@ -35,6 +35,29 @@ Options:[
 </div></td></tr></tbody></table><h5 id="methods_attrtojson_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">*</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-attrtojson-page"><p>The formatted JavaScript value based on field type.</p>
 </div></td></tr></table></div>
 </li>
+<li><h3 id="methods_processlistitems">processListItems(model, responseXML, [options])</h3>
+<div class="processlistitems"><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Post processing of data after returning list items from server.  Returns a promise that resolves with
+the processed entities.  Promise allows us to batch conversions of large lists to prevent ui slowdowns.</p>
+</div><h5 id="methods_processlistitems_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Reference to allow updating of model.</p>
+</div></td></tr><tr><td>responseXML</td><td><a href="" class="label type-hint type-hint-xml">xml</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Resolved promise from SPServices web service call.</p>
+</div></td></tr><tr><td>[options]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Optional configuration object.</p>
+</div></td></tr><tr><td>options.factory</td><td><a href="" class="label type-hint type-hint-function">function</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Constructor function typically stored on the model.</p>
+</div> <p><em>(default: model.factory)</em></p></td></tr><tr><td>options.filter</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>XML filter string used to find the elements to iterate over.</p>
+</div> <p><em>(default: 'z:row')</em></p></td></tr><tr><td>options.mapping</td><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Field definitions, typically stored on the model.</p>
+</div> <p><em>(default: model.list.mapping)</em></p></td></tr><tr><td>options.mode</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Options for what to do with local list data array in
+store [&#39;replace&#39;, &#39;update&#39;, &#39;return&#39;]</p>
+</div> <p><em>(default: 'update')</em></p></td></tr><tr><td>options.target</td><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Optionally pass in array to update after processing.</p>
+</div> <p><em>(default: model.getCache())</em></p></td></tr></tbody></table><h5 id="methods_processlistitems_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-processlistitems-page"><p>Promise</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_updatelocalcache">updateLocalCache(localCache, entities)</h3>
+<div class="updatelocalcache"><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-updatelocalcache-page"><p>Maps a cache by entity id.  All provided entities are then either added if they don&#39;t already exist
+or replaced if they do.</p>
+</div><h5 id="methods_updatelocalcache_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>localCache</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-updatelocalcache-page"><p>The cache for a given query.</p>
+</div></td></tr><tr><td>entities</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-updatelocalcache-page"><p>All entities that should be merged into the cache.</p>
+</div></td></tr></tbody></table><h5 id="methods_updatelocalcache_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-updatelocalcache-page"><p>{created: number, updated: number}</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_xmltojson">xmlToJson(rows, options)</h3>
 <div class="xmltojson"><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-xmltojson-page"><p>Converts an XML node set to Javascript object array. This is a modified version of the SPServices
 &quot;SPXmlToJson&quot; function.</p>
